Fixes ``ApiKeyAuthentication`` security issue (#795).
``ApiKeyAuthentication`` assigns user to request object basing only on
username checks what will change current user to any provided through
username value. This caused an security vulnerability when used in conjuction
with other auth backends using ``MultiAuthentication``.

Added tests for security issue described in #795

--- a/AUTHORS
+++ b/AUTHORS
@@ -70,6 +70,7 @@ Contributors:
 * Wes Winham (winhamwr) for a documentation patch.
 * Andrew Austin (andrewaustin) for triaging, verifying and patching several tickets.
 * Numan Sachwani (numan) and Curtis Maloney (funkybob) for patch which allows fields to be omitted from list/detail form of resources.
+* Anton V. Yanchenko (simplylizz) for reporting and providing a patch for a security vulnerability involving ``MultiAuthentication`` and ``ApiKeyAuthentication``
 
 Thanks to Tav for providing validate_jsonp.py, placed in public domain.
 
